@@ -49,6 +49,9 @@ python-apt (0.8.5) UNRELEASED; urgency=low
       a segmentation fault (Closes: #661062)
   * python/tag.cc:
     - Correctly handle file descriptor 0 aka stdin (Closes: #669458)
+  * python/acquire.cc:
+    - Use pkgAcquire::Setup() to setup the acquire class and handle errors
+      from this (Closes: #629624)
 
  -- Michael Vogt <mvo@debian.org>  Tue, 17 Apr 2012 14:09:24 +0200
 
